--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 
 <p>
-This is my website.
+This is my website. 
+I live in lokavec and i'm a mom of a baby boy. We live in the house and we have a dog.
 </p>
+<h1> Website on my own. </h1>
 
 </body>
 </html>
